Configurando comentarios para usar apenas idEvento como parametro
